[tool.poetry]
name = "wfexporter"
version = "0.2.0"
description = "Export Databricks workflows and DLT pipelines as YAML files with modular architecture"
authors = ["Shubham Jain <shubham.j@databricks.com>"]
readme = "README.md"
packages = [{include = "wfExporter", from = "src"}]
include = ["config/config.yml", "config/databricks.yml"]

[tool.poetry.scripts]
wf-export = "wfExporter.cli_entry:cli_main"

[tool.poetry.dependencies]
python = "^3.11"
pandas = ">=1.2.5,<2.3.0"
pyyaml = "^6.0.2"
databricks-sdk = "^0.58.0"
setuptools = "^69.0.0"  # Required for pkg_resources

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
